test/should-fail/no-such-method-super/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

// no-such-method-super

klass k1
{
  method foo(object-t self) -> object-t {
    $foo(super);
    return self;
  }
}

int-t main() {
  object-t o = make(k1::klass);
  $foo(o);
  return 0;
}
